@@ -11,6 +11,7 @@
   [patch #3780]	<assert.h> header
   [patch #3912] Fix ctype.S linker error due to asm branches out
                 of range
+  [patch #3782] modernize <stdint.h>
 
   - Update the build system to recent versions of autoconf/automake;
     the old "doconf" and "domake" scripts are gone now, "reconf" has
